--- a/dragonfly-client/Cargo.toml
+++ b/dragonfly-client/Cargo.toml
@@ -123,7 +123,7 @@ assets = [
     "755",
   ],
   [
-    "../systemd.service",
+    "../dfdaemon.service",
     "lib/systemd/system/dfdaemon.service",
     "644",
   ],
@@ -175,7 +175,7 @@ assets = [
     "755",
   ],
   [
-    "../systemd.service",
+    "../dfdaemon.service",
     "lib/systemd/system/dfdaemon.service",
     "644",
   ],
@@ -227,7 +227,7 @@ assets = [
     "755",
   ],
   [
-    "../systemd.service",
+    "../dfdaemon.service",
     "lib/systemd/system/dfdaemon.service",
     "644",
   ],
@@ -279,7 +279,7 @@ assets = [
     "755",
   ],
   [
-    "../systemd.service",
+    "../dfdaemon.service",
     "lib/systemd/system/dfdaemon.service",
     "644",
   ],
@@ -311,7 +311,7 @@ assets = [
   {source = "../target/x86_64-unknown-linux-gnu/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755"},
   {source = "../target/x86_64-unknown-linux-gnu/release/dfcache", dest = "/usr/bin/dfcache", mode = "755"},
   {source = "../target/x86_64-unknown-linux-gnu/release/dfstore", dest = "/usr/bin/dfstore", mode = "755"}, 
-  {source = "../systemd.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
+  {source = "../dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
   {source = "../ci/config.yaml", dest = "/etc/dragonfly/dfdaemon.yaml", mode = "644", config = true }, 
   {source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true},
   {source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true},
@@ -324,7 +324,7 @@ assets = [
   {source = "../target/x86_64-unknown-linux-musl/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755"},
   {source = "../target/x86_64-unknown-linux-musl/release/dfcache", dest = "/usr/bin/dfcache", mode = "755"},
   {source = "../target/x86_64-unknown-linux-musl/release/dfstore", dest = "/usr/bin/dfstore", mode = "755"}, 
-  {source = "../systemd.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
+  {source = "../dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
   {source = "../ci/config.yaml", dest = "/etc/dragonfly/dfdaemon.yaml", mode = "644", config = true },   
   {source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true},
   {source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true},
@@ -337,7 +337,7 @@ assets = [
   {source = "../target/aarch64-unknown-linux-gnu/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755"},
   {source = "../target/aarch64-unknown-linux-gnu/release/dfcache", dest = "/usr/bin/dfcache", mode = "755"},
   {source = "../target/aarch64-unknown-linux-gnu/release/dfstore", dest = "/usr/bin/dfstore", mode = "755"},
-  {source = "../systemd.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
+  {source = "../dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
   {source = "../ci/config.yaml", dest = "/etc/dragonfly/dfdaemon.yaml", mode = "644", config = true },     
   {source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true},
   {source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true},
@@ -350,7 +350,7 @@ assets = [
   {source = "../target/aarch64-unknown-linux-musl/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755"},
   {source = "../target/aarch64-unknown-linux-musl/release/dfcache", dest = "/usr/bin/dfcache", mode = "755"},
   {source = "../target/aarch64-unknown-linux-musl/release/dfstore", dest = "/usr/bin/dfstore", mode = "755"},
-  {source = "../systemd.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
+  {source = "../dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
   {source = "../ci/config.yaml", dest = "/etc/dragonfly/dfdaemon.yaml", mode = "644", config = true },     
   {source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true},
   {source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true},
