--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,9 +99,11 @@ jobs:
       - name: Upload Release Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: client-tar
-          path: ${{ env.CLIENT_TAR_ASSET }}
-
+          name: ${{ matrix.target }}-packages
+          path: |
+            *.tar.gz
+          if-no-files-found: error
+          
   release:
     runs-on: ubuntu-latest
     needs: [release-github]
