--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,7 +103,7 @@ jobs:
           path: |
             *.tar.gz
           if-no-files-found: error
-          
+
   release:
     runs-on: ubuntu-latest
     needs: [release-github]
@@ -117,7 +117,7 @@ jobs:
           generate_release_notes: true
           draft: true
           files: |      
-            ${{ env.CLIENT_TAR_ASSET }}
+            *.tar.gz
 
   publish-crates:
     runs-on: ubuntu-latest
