--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,13 +94,7 @@ jobs:
           mkdir -p "$dirname"
           mv CONTRIBUTING.md LICENSE README.md "$dirname"
           tar -czf "$dirname.tar.gz" "$dirname"
-
-  release:
-    runs-on: ubuntu-latest
-    needs: [release-github]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+          echo "CLIENT_TAR_ASSET=$dirname.tar.gz" >> $GITHUB_ENV
 
       - name: Release
         uses: softprops/action-gh-release@v2
@@ -108,7 +102,7 @@ jobs:
           generate_release_notes: true
           draft: true
           files: |      
-            *.tar.gz
+            ${{ env.CLIENT_TAR_ASSET }}
 
   publish-crates:
     runs-on: ubuntu-latest
